[B]Note:[/B] if the scraper is very slow, disable setting tagged with "(slow)".

[B]1.1.1[/B]
- Change default films search url: http://www.google.it/search?q=film_name+site:mymovies.it
- Fixed trailer problem. The first and only issue reported on http://code.google.com/p/mymovies-xbmc-scraper/issues/ ;)
- Fixed search problem. Reported here http://forum.xbmc.org/showpost.php?p=733887&postcount=89

[B]1.1.0[/B]
- Fixed problem for long title
- Added support for new title (asterix votes)
- Used tag <rating max="*">
- Fixed problem with single poster in low res
- Fixed trailer
- Fixed TMDB FanART
- Improved append varius stuff to plot

[B]1.0.6[/B]
- Aggiunto il supporto a XBMC 10.5 (addons system)
- Fixed trailer
- Riorganizzato il menù configurazione 